# SalesReportManager

./: CMakeLists.txt  appcontroller.cpp  appcontroller.h  appsettings.cpp  appsettings.h  balancesheet.cpp  balancesheet.h  currencies.cpp  currency.cpp  currency.h  dailyreport.cpp  dailyreport.h  decompresser.cpp  decompresser.h  exchangerates.cpp  exchangerates.h  financialreport.cpp  financialreport.h  fotis.html  httprequest.cpp  httprequest.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  preferecesdialog.cpp  preferecesdialog.h  preferecesdialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  productsbycountry.cpp  productsbycountry.h  property.cpp  property.h  purchase.cpp  purchase.h  purchases.cpp  purchases.h  resources.qrc  (+9 more)
apple_daily_reports/: S_D_20131017.txt
exchange_rates/: aed.txt  afn.txt  all.txt  amd.txt  ang.txt  aoa.txt  ars.txt  aud.txt  awg.txt  azn.txt  bam.txt  bbd.txt  bdt.txt  bgn.txt  bhd.txt  bif.txt  bnd.txt  bob.txt  brl.txt  bsd.txt  btc.txt  btn.txt  bwp.txt  byr.txt  bzd.txt  cad.txt  cdf.txt  chf.txt  clf.txt  clp.txt  cnh.txt  cny.txt  cop.txt  crc.txt  cve.txt  cyp.txt  czk.txt  dem.txt  djf.txt  dkk.txt  (+123 more)
reports/: balancesheetrep.cpp  balancesheetrep.h  bycountryrep.cpp  bycountryrep.h  subsidiaryledgerrep.cpp  subsidiaryledgerrep.h
